--- a/Trabalhos/MTES/sobre.html
+++ b/Trabalhos/MTES/sobre.html
@@ -5,7 +5,9 @@
 	<meta charset="utf-8">
 	<title>Projeto</title>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="slider.css">
 	<link rel="stylesheet" type="text/css" href="global.css">
+	<link rel="stylesheet" href="sobre.css">
 </head>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
@@ -32,9 +34,53 @@
 				</div>
 			</div>
 		</div>
-<main>
-<!--Titulo aqui-->
- 
+
+<main class="main">
+	<div>
+		<h2 class="no-background"><span>Métodos e técnicas de engenharia de software</b></span></h2>
+	</div>
+
+<div class="slider" data-pos="0">
+	<div class="slider__slides">
+			<section id="home" class="slider__slide">
+<div class="card__collection clear-fix">
+<div class="cards cards--two" onclick=" window.open('https://github.com/Ju-Sa','_blank')">
+    <img src="https://avatars1.githubusercontent.com/u/63364532?s=400&u=46046f99aefe85366e33d7ecd90ca0e37a6ba7b2&v=4" class="img-responsive" alt="Cards Image" >
+    <span class="cards--two__rect"></span>
+    <p>Juliana Sá</p>
+  </div>
+</div>
+<div id="infoJuju">
+	<h1>Juliana Lemos de Sá</h1>
+	<p>Matricula: 5306562<br>Turma: EIN390-01<br>Semestre: 2° de 2020</p>
+	<img src="img/git.png" width="32px;" onclick=" window.open('https://github.com/Ju-Sa','_blank')"> Ju-sa</img>
+</div>
+			</section>
+			<section id="home" class="slider__slide">
+				<div class="card__collection clear-fix">
+	<div class="cards cards--three" onclick=" window.open('https://github.com/anderspotato','_blank')">
+    <img src="https://avatars3.githubusercontent.com/u/50058700?s=400&u=7c87445cb20162d2f0f31913ad14ef98e19d39b7&v=4" class="img-responsive" alt="">
+    <span class="cards--three__rect-1">
+      <span class="shadow-1"></span>
+      <p>Anderson Santos</p>
+    </span>
+  </div>
+</div>
+<div id="infoAnder">
+	<h1>Anderson Santos da Silva Filho</h1>
+	<p>Matricula: 5306595<br>Turma: EIN390-01<br>Semestre: 2° de 2020</p>
+	<img src="img/git.png" width="32px;" onclick=" window.open('https://github.com/anderspotato','_blank')"> AndersPotato</img>
+</div>
+			</section>
+		</div>
+		<div class="slider__dots">
+			<a href="#" class="slider__indicator"></a>
+			<a href="#" class="slider__dot" data-pos="0"></a>
+			<a href="#" class="slider__dot" data-pos="1"></a>
+		</div>
+</div>
+<script type="text/javascript" src="slider.js"></script>
+
 </main>
 </body>
 </html>
