--- a/Trabalhos/MTES/sobre.html
+++ b/Trabalhos/MTES/sobre.html
@@ -51,7 +51,7 @@
   </div>
 </div>
 <div id="infoJuju">
-	<h1>Juliana Lemos de Sá</h1>
+	<h1><span style="color: #3D99F2;">Juliana Lemos de Sá</span></h1>
 	<p>Matricula: 5306562<br>Turma: EIN390-01<br>Semestre: 2° de 2020</p>
 	<img src="img/git.png" width="32px;" onclick=" window.open('https://github.com/Ju-Sa','_blank')"> Ju-sa</img>
 </div>
@@ -67,7 +67,7 @@
   </div>
 </div>
 <div id="infoAnder">
-	<h1>Anderson Santos da Silva Filho</h1>
+	<h1><span style="color: #3D99F2;">Anderson Santos da Silva Filho</span></h1>
 	<p>Matricula: 5306595<br>Turma: EIN390-01<br>Semestre: 2° de 2020</p>
 	<img src="img/git.png" width="32px;" onclick=" window.open('https://github.com/anderspotato','_blank')"> AndersPotato</img>
 </div>
