--- a/Trabalhos/MTES/sobre.html
+++ b/Trabalhos/MTES/sobre.html
@@ -38,6 +38,7 @@
 <main class="main">
 	<div>
 		<h2 class="no-background"><span>Métodos e técnicas de engenharia de software</b></span></h2>
+		<h5 style="text-align: center;"><span style="color: #3D99F2;">Alexandre Neves Louzada</span></h5>
 	</div>
 
 <div class="slider" data-pos="0">
